--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 <style>
 body {
     font-family: Arial, sans-serif;
-    background: #FF5C00;
+    background-image: url("fundo.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     padding: 20px;
+    margin: 0;
 }
 .container {
     background: #ffffff;
