--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <style>
 body {
     font-family: Arial, sans-serif;
-    background-image: url("fundo.jpg");
+    background:
+      linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
+      url("fundo.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -152,4 +154,5 @@ function limparCampos() {
 
 </body>
 </html>
+
 
