--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
 <style>
 body {
     font-family: Arial, sans-serif;
-    background: #e9eef3;
+    background:
+      linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
+      url("fundo.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     padding: 20px;
     margin: 0;
 }
-
 /* ====== ABAS ====== */
 .tabs {
     display: flex;
@@ -231,3 +236,4 @@ function limparRelatorio() {
 
 </body>
 </html>
+
