--- a/index.html
+++ b/index.html
@@ -49,14 +49,17 @@ body {
 
 /* ====== CONTAINER PADRÃO ====== */
 .container {
-    background: #ffffff;
+    background: rgba(255, 255, 255, 0.18);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+
     padding: 20px;
     max-width: 560px;
     margin: auto;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    border-radius: 14px;
+    box-shadow: 0 8px 32px rgba(0,0,0,0.25);
+    border: 1px solid rgba(255,255,255,0.3);
 }
-
 h2 {
     text-align: center;
     color: #0b5394;
@@ -236,4 +239,5 @@ function limparRelatorio() {
 
 </body>
 </html>
+
 
