--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ button.secundario {
 <!-- ============ OCORRÊNCIAS ============ -->
 <div id="obs" class="tab-content active">
 <div class="container">
-<h2>OCORRÊNCIAS</h2>
+<h2>HITÓRICO OCORRÊNCIAS RELEVANTES</h2>
 
 <label>Nova ocorrência</label>
 <textarea id="obsTexto"></textarea>
@@ -338,3 +338,4 @@ function limparCallback(){
 
 </body>
 </html>
+
