--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ button.secundario {
 <div id="toast">Texto copiado com sucesso!</div>
 
 <div class="tabs">
-  <button class="tab-btn active" onclick="openTab('obs',this)">📝 OCORRÊNCIAS / HISTÓRICO</button>
+  <button class="tab-btn active" onclick="openTab('obs',this)">📝 OBSERVAÇÕES / RELEVANTES</button>
   <button class="tab-btn" onclick="openTab('rel',this)">📋 BLOQUEIO – LINHA VIVA</button>
   <button class="tab-btn" onclick="openTab('callback',this)">📞 CALLBACK</button>
 </div>
@@ -153,7 +153,7 @@ button.secundario {
 <!-- ============ OCORRÊNCIAS ============ -->
 <div id="obs" class="tab-content active">
 <div class="container">
-<h2>HITÓRICO OCORRÊNCIAS RELEVANTES</h2>
+<h2>OBSERVAÇÕES OCORRÊNCIAS RELEVANTES</h2>
 
 <label>Nova ocorrência</label>
 <textarea id="obsTexto"></textarea>
@@ -338,4 +338,5 @@ function limparCallback(){
 
 </body>
 </html>
+
 
