--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@ button.secundario {
 
 <label>Atuação realizada via:</label>
 <div class="opcoes">
-<input type="radio" name="atuacao" id="celular">
+<input type="radio" name="Atuacao via Celular" id="celular">
 <label for="celular" class="card">Celular</label>
 
-<input type="radio" name="atuacao" id="ramalRadio">
+<input type="radio" name="Atuacao via Ramal" id="ramalRadio">
 <label for="ramalRadio" class="card">Ramal</label>
 </div>
 
@@ -338,6 +338,7 @@ function limparCallback(){
 
 </body>
 </html>
+
 
 
 
