--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>SCRIPT AUTOMATIZADOS COI</title>
+<title>SCRIPT AUTOMATIZADO COI</title>
 
 <style>
 body {
@@ -317,4 +317,5 @@ function limparCallback(){
 
 </body>
 </html>
+
 
